--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "10.50.0",
+    "node": "10.x",
     "npm": "6.4.1"
   },
   "scripts": {
