--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,28 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "engines": {
     "node": "10.x",
     "npm": "6.4.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "build": "tsc",
+    "start": "build/index.js",
+    "dev": "ts-node-dev src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/node": "^10.12.21",
+    "ts-node-dev": "^1.0.0-pre.32"
   }
 }
