--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node ./build/index.js",
+    "start": "node ./build/index.js",
     "dev": "ts-node-dev src/index.ts"
   },
   "author": "",
