--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,9 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node ./build/index.js",
-    "dev": "ts-node-dev src/index.ts"
+    "compile": "tsc && node ./build/src/index.js",
+    "dev": "nodemon -e ts  --exec \"npm run compile\"",
+    "start": "node ./build/src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,12 +18,16 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^10.12.21",
-    "ts-node-dev": "^1.0.0-pre.32"
+    "@types/passport": "^1.0.0",
+    "nodemon": "^1.18.9"
   }
 }
