--- a/server/package.json
+++ b/server/package.json
@@ -8,15 +8,16 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "compile": "tsc && node -r dotenv/config ./build/src/index.js",
+    "compile": "tsc && node -r dotenv/config ./build/index.js",
     "dev": "nodemon -e ts  --exec \"npm run compile\"",
-    "start": "node -r dotenv/config ./build/src/index.js"
+    "start": "node -r dotenv/config ./build/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "auth0-js": "^9.10.0",
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/auth0-js": "^8.11.11",
     "@types/body-parser": "^1.17.0",
+    "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.12",
     "@types/node": "^10.12.21",
