--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "compile": "tsc && node -r dotenv/config ./build/index.js",
     "dev": "nodemon -e ts  --exec \"npm run compile\"",
-    "start": "node -r dotenv/config ./build/index.js"
+    "start": "./build/index.js"
   },
   "author": "",
   "license": "ISC",
