--- a/server/package.json
+++ b/server/package.json
@@ -16,31 +16,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "auth0-js": "^9.10.0",
-    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "cookie-session": "^2.0.0-beta.3",
-    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.11",
     "passport": "^0.4.0",
-    "passport-auth0": "^1.1.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^1.0.0",
-    "path": "^0.12.7",
-    "pug": "^2.0.3",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.1"
   },
   "devDependencies": {
-    "@types/auth0-js": "^8.11.11",
-    "@types/body-parser": "^1.17.0",
     "@types/cookie-session": "^2.0.36",
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.12",
     "@types/node": "^10.12.21",
     "@types/passport": "^1.0.0",
-    "@types/pug": "^2.0.4",
     "nodemon": "^1.18.9"
   }
 }
